# t3-chat-clone-backend

./: .env  .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: rust-clippy.yml
db/: Cargo.toml
db/migrations/2025-06-09-121536_create_chat/: down.sql  up.sql
db/src/: schema.rs
db/src/models/: channel.rs  message.rs  mod.rs
src/: main.rs
src/api/: mod.rs
src/auth/: gen.rs  mod.rs
src/models/: llm_provider.rs  mod.rs
src/models/providers/: openai.rs
