[package]
name = "t3-chat-clone-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
db = { path = "./db" }
serde = "1.0.219"
anyhow = "1.0.98"
async-openai = "0.28.3"
async-trait = "0.1.88"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"

[[bin]]
name = "t3-chat-clone-backend"
path = "src/main.rs"

[[bin]]
name = "api-key-generator"
path = "src/auth/gen.rs"
